--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -17,21 +17,14 @@ jobs:
       - name: checkout git
         uses: actions/checkout@v4
 
-      - name: install pnpm
-        run: npm i -g pnpm
-
-      - name: setup pnpm
-        shell: bash
-        run: pnpm setup
-
       - name: install deps
-        run: pnpm install --no-frozen-lockfile && pnpm add -g @wpe-tkpd/bundlesize
+        run: npm i -g @wpe-tkpd/bundlesize
 
       - name: build code
-        run: pnpm build
+        run: npm run build
 
       - name: bundle size
-        run: pnpm bundle-size
+        run: npm run bundle-size
 
       - name: get bundle size report
         run: node $build_dir/create-table.js
