--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -17,14 +17,19 @@ jobs:
       - name: checkout git
         uses: actions/checkout@v4
 
+      - name: setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: install deps
-        run: npm i -g @wpe-tkpd/bundlesize
+        run: pnpm add -g @wpe-tkpd/bundlesize
 
       - name: build code
-        run: npm run build
+        run: pnpm build
 
       - name: bundle size
-        run: npm run bundle-size
+        run: pnpm bundle-size
 
       - name: get bundle size report
         run: node $build_dir/create-table.js
