--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/gobielJonathan/gh-learn#readme",
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "esbuild": "^0.19.4"
   },
   "bundlesize": [
