--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -52,6 +52,7 @@ jobs:
       - name: post bundle size report
         uses: actions/github-script@v6
         with:
+          node-version: 18
           script: |
             const baseHeaders = {
               Accept: "application/vnd.github.v3+json",
@@ -64,10 +65,10 @@ jobs:
             const issueNumber = ${{ github.event.pull_request.number }}
             
             await fetch(`https://github.com/gobielJonathan/gh-learn/issues/${issueNumber}/comments`, {
-                method: "POST",
-                headers: baseHeaders,
-                body: JSON.stringify(messageBody),
-              });
+              method: "POST",
+              headers: baseHeaders,
+              body: JSON.stringify(messageBody),
+            });
 
       
       
