--- a/.github/workflows/bundle-analyzer.yml
+++ b/.github/workflows/bundle-analyzer.yml
@@ -1,7 +1,8 @@
-name: action demo
+name: Bundle Analyzer
 run-name: ${{ github.actor }} is testing out github action
 
 on: 
+  workflow_dispatch:
   pull_request:
     types: [opened,synchronize]
 
@@ -66,7 +67,7 @@ jobs:
             fetch(`https://github.com/gobielJonathan/gh-learn/issues/${issueNumber}/comments`, {
               method: "POST",
               headers: baseHeaders,
-              body: JSON.stringify(messageBody),
+              body: messageBody,
             });
 
       
