--- a/.github/workflows/bundle-analyzer.yml
+++ b/.github/workflows/bundle-analyzer.yml
@@ -63,12 +63,16 @@ jobs:
 
             const messageBody = ${{ steps.report.outputs.report }}
             const issueNumber = ${{ github.event.pull_request.number }}
-            
-            fetch(`https://github.com/gobielJonathan/gh-learn/issues/${issueNumber}/comments`, {
+            console.log({url : `https://github.com/gobielJonathan/gh-learn/issues/${issueNumber}/comments` , body : {
               method: "POST",
               headers: baseHeaders,
               body: messageBody,
-            });
+            } })
+            # fetch(`https://github.com/gobielJonathan/gh-learn/issues/${issueNumber}/comments`, {
+            #   method: "POST",
+            #   headers: baseHeaders,
+            #   body: messageBody,
+            # });
 
       
       
