--- a/.github/workflows/bundle-analyzer.yml
+++ b/.github/workflows/bundle-analyzer.yml
@@ -63,7 +63,7 @@ jobs:
 
             const messageBody = `${{ steps.report.outputs.report }}`
 
-            github.issues.createComment({
+             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
