sync master bundle size config

--- a/.github/actions/format-bundle-size-report/action.yml
+++ b/.github/actions/format-bundle-size-report/action.yml
@@ -5,7 +5,9 @@ inputs:
   bundleSizeOutput: 
     required: true
     description: bundle size report output
-
+  masterBundleSize: 
+    required: true
+    description: master bundle size report
 
 outputs:
   report: 
