--- a/.github/workflows/bundle-analyzer.yml
+++ b/.github/workflows/bundle-analyzer.yml
@@ -10,7 +10,41 @@ env:
   build_dir: "build"
 
 jobs:
-  explore-github-action: 
+  get-master-bundle-size:
+     runs-on: ubuntu-22.04
+     steps:
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.17'
+
+      - name: checkout git
+        uses: actions/checkout@v4
+        with:
+          ref: 'main'
+
+      - name: setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: install deps
+        run: pnpm install --no-frozen-lockfile
+
+      - name: install bundlesize standalone deps
+        run:  pnpm add -g @wpe-tkpd/bundlesize
+
+      - name: build code
+        run: pnpm build
+
+      - name: bundle size
+        run: pnpm bundle-size
+
+      - name: get bundle size config
+        id: config
+        uses: ./.github/actions/bundle-size
+
+  generate-report: 
     runs-on: ubuntu-22.04
     steps:
       - name: setup node
@@ -47,6 +81,7 @@ jobs:
         uses: ./.github/actions/format-bundle-size-report
         with:
           bundleSizeOutput: ${{ steps.config.outputs.bundleSizeOutput }}
+          masterBundleSize: ${{ jobs.get-master-bundle-size.steps.config.outputs.bundleSizeOutput }}
           
 
       - name: post bundle size report
